@@ -6,7 +6,7 @@
 		<PROPERTY NAME="indentOpenBrackets" VALUE="[{"/>
 		<PROPERTY NAME="indentCloseBrackets" VALUE="]}"/>
 		<PROPERTY NAME="lineUpClosingBracket" VALUE="true"/>
-		<PROPERTY NAME="indentNextLines" VALUE="^(:|M:|C:)[^;]*"/>
+		<PROPERTY NAME="indentNextLines" VALUE="^(:|M:|C:|PREDICATE:)[^;]*"/>
 		<PROPERTY NAME="doubleBracketIndent" VALUE="true"/>
 		<PROPERTY NAME="commentStart" VALUE="("/>
 		<PROPERTY NAME="commentEnd" VALUE=")"/>
